@startuml CarGuy

entity User {
 * UID
 Username
 Password
 Publicname
 Description
 Title
 Image
 created_at
}

entity Post {
 * PID
 Title
 Content
 UID (FK)
 published_at
 Forum_id (FK)
 Likes
 Dislikes
}

entity Comment {
 * CID
 Content
 UID (FK)
 PID (FK)
 Parent_CID (FK)
 published_at
 Likes
 Dislikes
}

entity Forum {
 * Forum_id
 Name
 Description
 Parent_Forum_id (FK)
 Created_at
}

entity Post_Category {
 * Post_Category_id (PK)
    Post_Category_Name
}

entity Forum_Category {
 * Forum_Category_id (PK)
    Forum_Category_Name
}

entity User_In_Forum {
 * UID (FK)
 * Forum_id (FK)
}

User "1" -- "0..*" Post : creates
User "1" -- "0..*" Comment : creates
Post "1" -- "0..*" Comment : has
Forum "1" -- "0..*" Post : contains
Forum "1" -- "0..*" Forum : contains
Comment "0..1" -- "0..*" Comment : replies to
Post "0..*" -- "1" Post_Category : categorized as
Forum "0..*" -- "1" Forum_Category : categorized as
User "0..*" -- "0..1" User_In_Forum
Forum "0..*" -- "0..1" User_In_Forum
@enduml